fixed alignment on the top

--- a/client/src/components/modules/NavBar/LoginButton.css
+++ b/client/src/components/modules/NavBar/LoginButton.css
@@ -1,5 +1,9 @@
 .loginButton-container {
-  height: 3em;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  min-width: 5em;
+  max-width: 5em;
   display: flex;
   align-items: center; /* Align text and bars vertically */
 }
